# VulQIan

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  conanfile.py
.github/workflows/: cmake.yml  release-please.yml
cmake/: declarations.cmake  dependencies.cmake  models.cmake  options.cmake  shaders.cmake
source/: CMakeLists.txt
source/VulQIan/: CMakeLists.txt  Engine.cpp  Engine.hpp
source/VulQIan/ECS/: ComponentArray.hpp  ComponentManager.cpp  ComponentManager.hpp  ECS.hpp  EntityManager.hpp  Types.hpp
source/VulQIan/ECS/Components/: ComponentArray.cpp  ComponentArray.hpp  ComponentManager.hpp  Mesh.hpp  PointLight.hpp  Transform.hpp  Transparency.hpp
source/VulQIan/ECS/Coordinator/: Coordinator.cpp  Coordinator.hpp
source/VulQIan/ECS/Entities/: EntityManager.cpp  EntityManager.hpp
source/VulQIan/ECS/Systems/: Physics.hpp  PointLights.cpp  PointLights.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp
source/VulQIan/Exception/: Exception.hpp
source/VulQIan/Graphics/Buffer/: Buffer.cpp  Buffer.hpp
source/VulQIan/Graphics/Camera/: Camera.cpp  Camera.hpp
source/VulQIan/Graphics/Descriptors/: Descriptors.cpp  Descriptors.hpp
source/VulQIan/Graphics/Device/: Device.cpp  Device.hpp
source/VulQIan/Graphics/Frames/: Frame.hpp
source/VulQIan/Graphics/Model/: Model.cpp  Model.hpp
source/VulQIan/Graphics/Pipeline/: Pipeline.cpp  Pipeline.hpp
source/VulQIan/Graphics/Renderer/: RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp
source/VulQIan/Graphics/Shaders/: compile.sh  simple_shader.vert
source/VulQIan/Graphics/SwapChain/: SwapChain.cpp  SwapChain.hpp
source/VulQIan/Graphics/Textures/: Manager.cpp  Manager.hpp  Texture.cpp  Texture.hpp
source/VulQIan/Graphics/WorldObject/: WorldObject.cpp  WorldObject.hpp
source/VulQIan/Input/Keyboard/: Keyboard.cpp  Keyboard.hpp
source/VulQIan/Input/Mouse/: Mouse.cpp  Mouse.hpp
source/VulQIan/Shaders/: compile.bat  compile.sh  point_light.vert  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
source/VulQIan/Utils/: Utils.hpp
source/VulQIan/Window/: Window.cpp  Window.hpp  window.cpp  window.hpp
source/VulQIan/tests/: CMakeLists.txt  test_example.cpp
source/engine/: CMakeLists.txt  engine.cpp
source/examples/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
